--- a/GameData/FirespitterExtended/Parts/Aero/Circular/circularTail1/circularTail.cfg
+++ b/GameData/FirespitterExtended/Parts/Aero/Circular/circularTail1/circularTail.cfg
@@ -2,9 +2,9 @@ PART
 {
 
 // --- general parameters ---
-name = canvasDelta1
+name = circularTail1
 module = Part
-author = Snjo, Murican_Jeb
+author = Murican_Jeb
 
 // --- asset parameters ---
 rescaleFactor = 1
@@ -16,9 +16,9 @@ cost = 1000
 entryCost = 2000
 category = Aero
 subcategory = 0
-title = FS4R Delta Rudder
+title = FS5R Circular Rudder V1
 manufacturer = Bitesized Industries
-description = A pointy rudder from an old biplane. After offsetting, it strangley fits nicely with the V3 tail, which is also pointy. Could this be point-ception, or is it just how it was designed?
+description = A curvy rudder from a very old monoplane. For whatever reason, the aircraft built with it was supposedly meant to fit on the Biplane Tail V2 for some plane called the "Einstien-decker" or something. I guessed those Central powers really like frisbees for tails...
 // attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 attachRules = 0,1,0,1,1
 
@@ -40,38 +40,37 @@ node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0
 	explosionPotential = 0.1
 	bulkheadProfiles = srf
 
-
 	MODULE
 	{
 		name = ModuleControlSurface
 		useInternalDragModel = True
-		dragCoeff = 0.30
-		deflectionLiftCoeff = 0.15
+		dragCoeff = 0.25
+		deflectionLiftCoeff = 0.18
 		ctrlSurfaceRange = 25
-		ctrlSurfaceArea = 0.5
+		ctrlSurfaceArea = 0.6
 		actuatorSpeed = 120
-		transformName = ctrlSurface
+		transformName = hinge
 	}
-	
+
 MODULE
- {
+{
 	name = FStextureSwitch
 	moduleID = 0	
 	//showListButton = True
 	//switchableInFlight = True	
 	textures
 	{
-		name = Firespitter/Assets/Biplane_01_WHITE
-		name = Firespitter/Assets/Biplane_01_GREEN
-		name = Firespitter/Assets/Biplane_01_RED
-		name = Firespitter/Assets/Biplane_01
+		name = FirespitterExtended/Assets/roundTail/roundTailRed
+		name = FirespitterExtended/Assets/roundTail/roundTail
+		name = FirespitterExtended/Assets/roundTail/roundTailStriped
+		name = FirespitterExtended/Assets/roundTail/roundTailBlank
 	}
 	objects
 	{
-		name = rudder
 		name = ctrlSurface
 	}
- }	
+}
+		
 }
 
 
