--- a/GameData/FirespitterExtended/Parts/Structural/BTail3/BiplaneTail3.cfg
+++ b/GameData/FirespitterExtended/Parts/Structural/BTail3/BiplaneTail3.cfg
@@ -2,7 +2,7 @@ PART
 {
 
 // --- general parameters ---
-name = BiplaneTail1
+name = BiplaneTail3
 module = Part
 author = Snjo, Murican_Jeb
 
@@ -16,9 +16,9 @@ cost = 1000
 entryCost = 3000
 category = Structural
 subcategory = 0
-title = FS4FT Biplane Tail Fuselage V2
+title = FS4FT Biplane Tail Fuselage V4
 manufacturer = Bitesized Industries
-description = A tail section from an old bi-plane. But you know, a meaner one, because the tail looks strange. Which obviously means it's made for a bad guy! Right?
+description = For whatever reason, the rear end of this tail is slightly raised, giving it a straight look on the top. A few historical-nut kerbals also noticed something odd; this tail most likely belonged to not a biplane, but a triplane! It can still be used for the former though, so theres nothing to worry about. Just slap this anywhere!
 // attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 attachRules = 1,0,0,1,1
 
@@ -61,7 +61,7 @@ MODULE
 	}
 	objects
 	{
-		name = BTail
+		name = BTail3
 	}
  }	
 
