--- a/GameData/FirespitterExtended/Parts/Aero/Delta/canvasDelta1/canvasDelta.cfg
+++ b/GameData/FirespitterExtended/Parts/Aero/Delta/canvasDelta1/canvasDelta.cfg
@@ -58,7 +58,7 @@ node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0
 		ctrlSurfaceRange = 25
 		ctrlSurfaceArea = 0.7
 		actuatorSpeed = 120
-		transformName = ctrlSurface
+		transformName = hinge
 	}
 	
 MODULE
