--- a/GameData/FirespitterExtended/Parts/Aero/Delta/canvasDelta2/canvasDelta.cfg
+++ b/GameData/FirespitterExtended/Parts/Aero/Delta/canvasDelta2/canvasDelta.cfg
@@ -7,7 +7,7 @@ module = Part
 author = Murican_Jeb
 
 // --- asset parameters ---
-rescaleFactor = 1.25
+rescaleFactor = 1
 mesh = model.mu
 
 // --- editor parameters ---
@@ -58,7 +58,7 @@ node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0
 		ctrlSurfaceRange = 25
 		ctrlSurfaceArea = 0.7
 		actuatorSpeed = 120
-		transformName = ctrlSurface
+		transformName = hinge
 	}
 	
 MODULE
