--- a/GameData/FirespitterExtended/Patches/ExtraSkinsPatch.cfg
+++ b/GameData/FirespitterExtended/Patches/ExtraSkinsPatch.cfg
@@ -207,6 +207,52 @@
 	}
 }
 
+@PART[circularTail1]
+{
+	-MODULE[FStextureSwitch] {}
+	MODULE,0
+	{
+		name = FStextureSwitch2
+		moduleID = 0
+		objectNames = ctrlSurface
+		textureNames = FirespitterExtended/Assets/roundTail/roundTailBlank;FirespitterExtended/Assets/roundTail/roundTail;FirespitterExtended/Assets/roundTail/roundTailStriped;FirespitterExtended/Assets/roundTail/roundTailRed
+		textureDisplayNames = Plain;Regular;Striped;Red
+		nextButtonText = Next Paintjob
+		prevButtonText = Previous Paintjob
+		statusText = Current Paintjob
+		switchableInFlight = false
+		repaintableEVA = true
+		showPreviousButton = true
+		useFuelSwitchModule = false
+		showInfo = false
+		debugMode = false
+		showListButton = false
+	}
+}
+
+@PART[circularTail2]
+{
+	-MODULE[FStextureSwitch] {}
+	MODULE,0
+	{
+		name = FStextureSwitch2
+		moduleID = 0
+		objectNames = ctrlSurface
+		textureNames = FirespitterExtended/Assets/roundTail/roundTailBlank;FirespitterExtended/Assets/roundTail/roundTail;FirespitterExtended/Assets/roundTail/roundTailStriped;FirespitterExtended/Assets/roundTail/roundTailRed
+		textureDisplayNames = Plain;Regular;Striped;Red
+		nextButtonText = Next Paintjob
+		prevButtonText = Previous Paintjob
+		statusText = Current Paintjob
+		switchableInFlight = false
+		repaintableEVA = true
+		showPreviousButton = true
+		useFuelSwitchModule = false
+		showInfo = false
+		debugMode = false
+		showListButton = false
+	}
+}
+
 //Command
 
 @PART[FS_BiplaneCockpit]
